# dagdag

./: .env  .gitignore  .localstack-setup.sh  .mise.toml  Dockerfile  README.md  compose.yaml  pyproject.toml
src/: config.py  definitions.py
src/assets/: __init__.py  convert.py  ingest.py  transform.py
src/resources/: postgres.py  s3.py
